# bascet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bat  git_hash.txt  merge_hist.py  monitor.sh  test_deflate_concat.tirp.bbgz  test_deflate_merged.tirp.bbgz  todo  wc
bascet-core/: Cargo.toml
bascet-core/src/: attr.rs  backing.rs  cell.rs  composite.rs  encode.rs  lib.rs  mem.rs  parse.rs  serialise.rs  stream.rs  utils.rs  writer.rs
bascet-core/src/attr/: attrs.rs  attrs_ext.rs  ext.rs  macros.rs  traits.rs
bascet-core/src/attr/ext/: __unused  as_bytes.rs  as_collection.rs  bytes.rs  collection.rs
bascet-core/src/backing/: backings.rs  traits.rs
bascet-core/src/builder/: traits.rs
bascet-core/src/cell/: attr.rs  builder.rs  cell.rs  core.rs  get.rs  macros.rs  marker.rs  test.rs  traits.rs
bascet-core/src/composite/: ext.rs  from.rs  iter.rs  markers.rs  traits.rs
bascet-core/src/composite/ext/: as_records.rs
bascet-core/src/decode/: result.rs  traits.rs
bascet-core/src/encode/: traits.rs
bascet-core/src/error/: error.rs
bascet-core/src/get/: traits.rs
bascet-core/src/mem/: arena.rs  arena_pool.rs  consts.rs  managed.rs  managed_refs.rs  traits.rs
bascet-core/src/parse/: from_parsed.rs  macros.rs  result.rs  traits.rs
bascet-core/src/query/: assume.rs  filter.rs  macros.rs  query.rs  traits.rs
bascet-core/src/serialise/: serialise_attr.rs  serialise_view.rs  traits.rs
bascet-core/src/stream/: as_block.rs  as_cell.rs  as_cell_accumulate.rs  as_record.rs  consts.rs  macros.rs  stream.rs  traits.rs
bascet-core/src/utils/: channel.rs  fs.rs  htsutils.rs  send_cell.rs  send_ptr.rs  sendable.rs  spinpark_loop.rs  teq.rs  threading.rs  unsafe_ptr.rs
bascet-core/src/utils/channel/: ordered.rs  ordered_receiver.rs  peekable.rs
bascet-core/src/utils/fs/: file_read_exact_at.rs  file_write_exact_at.rs
bascet-core/src/utils/send/: send_cell.rs
bascet-core/src/utils/threading/: spinpark_loop.rs
bascet-core/src/writer/: consts.rs  writer.rs
bascet-core/tests/: cell.rs
bascet-derive/: Cargo.toml
bascet-derive/src/: attrs.rs  composite.rs  derive.rs  derive_cell.rs  lib.rs  parser.rs  provide.rs  runtime.rs
bascet-io/: Cargo.toml  expanded.rs
bascet-io/src/: codec.rs  decode.rs  lib.rs  parse.rs
bascet-io/src/codec/: bbgz.rs  bgzf.rs  plain.rs
bascet-io/src/codec/bbgz/: bbgz.rs  block.rs  consts.rs  decode.rs  header.rs  trailer.rs  utils.rs  write.rs  writer.rs
bascet-io/src/decode/: bgzf.rs
bascet-io/src/parse/: bbgz.rs  fastq.old  fastq.rs  tirp.rs
bascet-io/src/parse/bbgz/: bbgz.rs  bbgz_as_block.rs
bascet-io/src/parse/fastq/: fastq.rs  fastq_as_record.rs
bascet-io/src/parse/tirp/: tirp.rs  tirp_as_cell.rs  tirp_as_record.rs
bascet-io/src/serialise/: traits.rs
bascet-io/src/serialise/format/: tsv.rs
bascet-io/tests/: as_block.rs  fastq.rs  tirp.rs
bascet-runtime/: Cargo.toml
bascet-runtime/src/: lib.rs  logging.rs
bascet-runtime/src/logging/: clap_parser.rs  config.rs  logger.rs  strictness.rs
bascet-runtime/tests/: test.rs
crates/bascet-cli/: Cargo.toml
crates/bascet-cli/src/: command.rs  lib.rs  main.rs
crates/bascet-cli/src/align/: bwa.rs  bwa_stock_driver.rs  common.rs  minimap2.rs  mod.rs  output.rs  star.rs  stream_helpers.rs
crates/bascet-cli/src/barcode/: atrandi_rnaseq_barcode.rs  atrandi_wgs_barcode_illumina.rs  atrandi_wgs_barcode_longread.rs  chemistry.rs  combinatorial_barcode_16bp.rs  combinatorial_barcode_8bp.rs  combinatorial_barcode_anysize.rs  general_barcode.rs  mod.rs  petriseq_barcode.rs  petriseq_barcodes.tsv
crates/bascet-cli/src/bigwig/: mod.rs
crates/bascet-cli/src/command/: align.rs  align_bwa.rs  align_bwa_stock_driver.rs  align_minimap2.rs  align_star.rs  align_stream_helpers.rs  bam2fragments.rs  bamsort.rs  countchrom.rs  countfeature.rs  countsketch.rs  countsketch_mat_depreciated.rs  detect_kmer_fq.rs  detect_kmer_kmc.rs  extract.rs  extract_terminal.rs  exttool.rs  fastqc.rs  featurise_kmc.rs  filterbam.rs  gecco.rs  getraw.rs  import_sra.rs  kmc_reads.rs  kraken.rs  limiters.rs  mapcell.rs  minhash_fq.rs  minhash_hist.rs  ncbi_genome_download.rs  qc.rs  sam_add_barcode_tag_cmd.rs  shardify.rs  skesa.rs  snpcall.rs  sysinfo.rs  threadcount.rs  tobigwig.rs  tofq.rs  transform.rs  (+2 more)
crates/bascet-cli/src/common/: consts.rs  readpair.rs
crates/bascet-cli/src/countsketch/: countsketch.rs
crates/bascet-cli/src/fileformat/: bam.rs  cell_list_file.rs  cell_readpair_reader.rs  detect_fileformat.rs  gff.rs  inmem_readpairs.rs  iterate_shard_reader.rs  list_fastq.rs  mod.rs  new_anndata.rs  paired_fastq.rs  shard.rs  single_fastq.rs  test.bed  test_bed.sh  tirp.rs  uuencode.rs  zip.rs
crates/bascet-cli/src/kmer/: bounded_heap.rs  minhash.rs  mod.rs
crates/bascet-cli/src/mapcell/: mapcell_script.rs
crates/bascet-cli/src/mapcell_scripts/: amrfinder.sh  ariba.sh  checkm.sh  countsketch_fq.rs  fastqc.sh  gecco.sh  gecco_rs.rs  kmc_process_reads.sh  mapcell_scripts.rs  minhash_fq.rs  mod.rs  quast.sh  skesa.sh  spades.sh
crates/bascet-cli/src/runtime/: error.rs  log.rs  macro.rs  mod.rs
crates/bascet-cli/src/serve/: serve.rs
crates/bascet-core/: Cargo.toml
crates/bascet-core/benches/: bursty.rs  parallel.rs  tiers.rs
crates/bascet-core/src/: apply.rs  arena.rs  attr.rs  composite.rs  consts.rs  contract.rs  coordinate.rs  execute.rs  layer.rs  lib.rs  owned.rs  parse.rs  pipe.rs  pipeline.rs  query.rs  runner.rs  runtime.rs  schedule.rs  serialise.rs  set.rs  sink.rs  source.rs  stage.rs  traits.rs  utils.rs  worker.rs
crates/bascet-core/tests/: attr_derive.rs  builder.rs  kanal.rs  pipeline.rs  pool.rs  set_identity.rs  set_ops.rs
crates/bascet-derive/: Cargo.toml
crates/bascet-derive/src/: attr.rs  attrs.rs  composite.rs  lib.rs  runtime.rs  schedule.rs  scheduling.rs
crates/bascet-io/: Cargo.toml
crates/bascet-io/src/: codec.rs  lib.rs  parse.rs
crates/bascet-runtime/: Cargo.toml
crates/bascet-runtime/src/: lib.rs  logging.rs
crates/bascet-variadic/: Cargo.toml
crates/bascet-variadic/src/: ast.rs  emit.rs  iter.rs  lib.rs
(+522 files in other folders)
