[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0-beta.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/henriksson-lab/bascet"
homepage = "https://henriksson-lab.github.io/zorn/"

[workspace.dependencies]
anyhow = "1.0.93"
bitflags = "2.10.0"
branches = "0.4.4"
bytemuck = "1.24.0"
crc32fast = "1.5.0"
crossbeam-utils = "0.8.21"
heck = "0.5.0"
libdeflater = "1.25.0"
libz-ng-sys = "1.1.23"
memmap2 = "0.9.9"
parking_lot = "0.12.5"
proc-macro2 = "1.0.103"
quote = "1.0.42"
rtrb = "0.3.2"
syn = { version = "2.0.111", features = ["full"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "smallvec", "parking_lot"] }
bascet-core = { path = "crates/bascet-core" }
bascet-cli = { path = "crates/bascet-cli" }
bascet-derive = { path = "crates/bascet-derive" }
bascet-io = { path = "crates/bascet-io" }
bascet-runtime = { path = "crates/bascet-runtime" }
bascet-variadic = { path = "crates/bascet-variadic" }
bgzip = { version = "0.3.1", features = ["zlib-ng"] }
bincode = "1.3.3"
bio = "2.0.3"
blart = "0.4.0"
bon = "3.8.2"
bounded-integer = "0.6.1"
bytesize = "2.3.1"
clap = { version = "4.5.23", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
crossbeam = "0.8.4"
csv = "1.2.2"
delegate = "0.13.1"
enum_dispatch = "0.3.13"
flate2 = { version = "1.1.9", features = [
  "zlib-rs",
], default-features = false }
fraction = "0.15.3"
glidesort = "0.1.2"
gxhash = "3.5.0"
hdf5 = { package = "hdf5-metno", version = "0.12.3" }
itertools = "0.13.0"
lazy_static = "1.5.0"
likely_stable = "0.1.3"
log = "0.4.19"
memchr = "2.8.0"
memory-stats = "1.0.0"
min-max-heap = "1.3.0"
niffler = "2.5.0"
nix = { version = "0.31.1", features = ["fs"] }
noodles = { version = "0.97.0", features = [
  "bam",
  "cram",
  "fastq",
  "sam",
  "gff",
  "gtf",
  "bgzf",
] }
nthash-rs = "0.1.3"
paste = "1.0.15"
path-clean = "1.0.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rust-htslib = "1.0.0"
semver = "1.0.23"
seq_io = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.16.1"
shellexpand = "3.1.1"
shellwords = "1.1.0"
slog = "2.8.2"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-term = "2.9.1"
smallvec = { version = "1.15.1", features = ["union"] }
sprs = "0.11.3"
strum = "0.28.0"
strum_macros = "0.27.2"
sysinfo = "0.38.2"
thiserror = "2.0.12"
threadpool = "1.8.1"
tracing = "0.1.44"
unix-named-pipe = "0.2.0"
wide = "1.1.1"

#HACK: crucial that we use old version (1.1.1). 2.x does not work. Other versions magnitudes slower.
#TODO: im going to be brave and try latest
# still not sure if using latest breaks anything else but for countsketch latest works.
# crucial to disable default features though due to dependency conflicts
zip = { version = "4.3.0", default-features = false, features = ["zstd"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
