[workspace]
members = [
    "crates/bascet-core",
    "crates/bascet-cli",
    "crates/bascet-io",
    "crates/bascet-derive",
    "crates/bascet-variadic",
]
resolver = "3"

[workspace.dependencies]
bascet-core = { path = "crates/bascet-core" }
bascet-derive = { path = "crates/bascet-derive" }
bascet-variadic = { path = "crates/bascet-variadic" }

atomic-traits = "0.4.0"
bon = { version = "3.9" }
branches = { version = "0.4" }
bytesize = { version = "2.4.0" }
compio = { version = "0.19.1", features = ["runtime", "time"] }
core_affinity = { version = "0.8.3" }
crossbeam = { version = "0.8.4" }
derive_more = { version = "2.1.1", features = ["full"] }
event-listener = { version = "5" }
inventory = { version = "0.3" }
kanal = { version = "0.1.1" }
memmap2 = { version = "0.9.11" }
num-traits = { version = "0.2" }
parking_lot = "0.12.5"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
