[package]
name = "bascet-core"
description = "Core abstractions used for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bascet-derive = { path = "../bascet-derive" }
bascet-variadic = { path = "../bascet-variadic" }
bon = "3.8.1"
bounded-integer = "0.6.1"
branches = "0.4.4"
bytemuck = "1.24.0"
bytesize = "2.2.0"
crossbeam = "0.8.4"
crossbeam-utils = "0.8.21"
memmap2 = "0.9.9"
rtrb = "0.3.2"
rust-htslib = "0.51.0"
serde = "1.0.228"
smallvec = { version = "1.15.1", features = ["union"] }
thiserror = "2.0.18"
tracing = "0.1.44"
