[package]
name = "bascet-derive"
description = "Bascet derive macros for cells"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
paste = "1.0.15"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
token_stream2 = "1.0.2"
