[package]
name = "bascet-derive"
description = "Bascet derive macros for cells"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
