[package]
name = "bascet-io"
description = "IO implementations required for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bascet-core = { path = "../bascet-core" }
bascet-variadic = { path = "../bascet-variadic" }
binrw = "0.15.0"
bon = "3.8.1"
bounded-integer = "0.6.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytesize = "2.2.0"
cloudflare-zlib-sys = "0.3.6"
crc32fast = "1.5.0"
crossbeam = "0.8.4"
csv = "1.4.0"
flate2 = { version = "1.1.8", features = ["cloudflare_zlib"] }
libdeflate-sys = "1.25.0"
libdeflater = "1.25.0"
libz-ng-sys = "1.1.23"
memchr = "2.7.6"
parking_lot = "0.12.5"
rust-htslib = "0.51.0"
serde = "1.0.228"
smallvec = { version = "1.15.1", features = ["union"] }
smart-default = "0.7.1"
threadpool = "1.8.1"
