[package]
name = "bascet-io"
description = "IO implementations required for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
bascet-core = { path = "../bascet-core" }
bon = "3.8.1"
bounded-integer = "0.6.1"
bytemuck = { version = "1.24.0", features = ["derive"] }
bytesize = "2.2.0"
crc32fast = "1.5.0"
crossbeam = "0.8.4"
libdeflater = "1.25.0"
libz-ng-sys = "1.1.23"
memchr = "2.7.6"
rust-htslib = "0.51.0"
serde = "1.0.228"
smallvec = { version = "1.15.1", features = ["union"] }
tracing = "0.1.44"
