[package]
name = "bascet-runtime"
description = "Runtime infrastructure for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bascet-derive = { path = "../bascet-derive" }
bitflags = "2.10.0"
bon = "3.8.1"
bounded-integer = "0.6.1"
bytesize = "2.3.1"
chrono = "0.4.43"
clap = "4.5.54"
clio = "0.3.5"
parking_lot = "0.12.5"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] } 
