[package]
name = "bascet-runtime"
description = "Runtime infrastructure for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bitflags = "2.10.0"
clap = "4.5.54"
clio = "0.3.5"
parking_lot = "0.12.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "smallvec", "parking_lot"] }
