[package]
name = "bascet-cli"
description = "Bascet is a tool to preprocess single-cell data, handling barcode detection, trimming, QC, and managing the execution of custom tools for each cell"
readme = "../../README.md"
include = ["/src", "Cargo.toml", "README.md"]

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "bascet"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["bwa-mem2-rs-align", "skesa", "fastqc", "gecco", "star-rs-align"]
bwa-mem2-rs-align = ["dep:bwa-mem2-rs"]
fastqc = ["dep:fastqc-rs"]
gecco = ["dep:gecco"]
minimap2-rs-align = ["dep:minimap2"]
skesa = ["dep:skesa-rs", "skesa-rs/cli"]
star-rs-align = ["dep:star-rs"]

[dependencies]
ahash = "0.8"
anyhow.workspace = true
polars-arrow.workspace = true
bascet-core.workspace = true
bascet-derive.workspace = true
bascet-io.workspace = true
bascet-runtime.workspace = true
bgzip.workspace = true
bio.workspace = true
bincode.workspace = true
blart.workspace = true
bon.workspace = true
bounded-integer.workspace = true
bwa-mem2-rs = { package = "bwa-mem2-pure-rs", git = "https://github.com/henriksson-lab/bwa-mem2-pure-rs", optional = true }
byteorder.workspace = true
byteordered.workspace = true
bytesize.workspace = true
clap.workspace = true
clio.workspace = true
crc32fast.workspace = true
crossbeam.workspace = true
crossbeam-channel.workspace = true
crossbeam-utils.workspace = true
csv.workspace = true
delegate.workspace = true
enum_dispatch.workspace = true
flate2.workspace = true
fraction.workspace = true
futures.workspace = true
fastqc-rs = { package = "fastqc-compliant-rs", version = "0.4.2", default-features = false, optional = true }
gecco = { workspace = true, features = ["bundled-data", "cli"], optional = true }
glidesort.workspace = true
gxhash.workspace = true
hdf5.workspace = true
index_list.workspace = true
itertools.workspace = true
kraken2-pure-rs = "0.2.0"
lazy_static.workspace = true
libc = "0.2"
libdeflater.workspace = true
memchr.workspace = true
memory-stats.workspace = true
min-max-heap.workspace = true
miniz_oxide.workspace = true
minimap2 = { package = "minimap2-pure-rs", git = "https://github.com/henriksson-lab/minimap2-pure-rs", optional = true }
niffler.workspace = true
noodles.workspace = true
nthash-rs.workspace = true
paste.workspace = true
path-clean.workspace = true
rand.workspace = true
rayon.workspace = true
semver.workspace = true
seq_io.workspace = true
serde.workspace = true
shellexpand.workspace = true
skesa-rs = { version = "0.2.1", default-features = false, optional = true }
smallvec.workspace = true
sprs.workspace = true
star-rs = { git = "https://github.com/henriksson-lab/star-rs", optional = true }
strum.workspace = true
strum_macros.workspace = true
threadpool.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wide.workspace = true
zip.workspace = true
zune-inflate.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo.workspace = true

[target.'cfg(not(windows))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
