[package]
name = "bascet-core"
version = "0.0.0"
edition = "2024"

[dependencies]
bascet-derive.workspace = true
bascet-variadic.workspace = true

atomic-traits.workspace = true
branches.workspace = true
bytesize.workspace = true
core_affinity.workspace = true
crossbeam.workspace = true
derive_more.workspace = true
event-listener.workspace = true
futures.workspace = true
inventory.workspace = true
kanal.workspace = true
memmap2.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
tokio.workspace = true
rayon.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
