[package]
name = "bascet-core"
version = "0.0.0"
edition = "2024"

[dependencies]
bascet-derive.workspace = true
bascet-variadic.workspace = true

atomic-traits.workspace = true
bon.workspace = true
branches.workspace = true
bytesize.workspace = true
compio.workspace = true
core_affinity.workspace = true
crossbeam.workspace = true
derive_more.workspace = true
event-listener.workspace = true
inventory.workspace = true
kanal.workspace = true
memmap2.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[bench]]
name = "bursty"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "tiers"
harness = false
