[package]
name = "bascet-derive"
description = "Bascet derive macros for cells"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
heck.workspace = true
quote.workspace = true
syn.workspace = true
tracing.workspace = true
