[package]
name = "bascet-io"
description = "IO implementations required for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bascet-core.workspace = true
bon.workspace = true
bounded-integer.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
bytesize.workspace = true
crc32fast.workspace = true
crossbeam.workspace = true
libdeflater.workspace = true
libz-ng-sys.workspace = true
memchr.workspace = true
rust-htslib.workspace = true
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true
