[package]
name = "bascet-runtime"
description = "Runtime infrastructure for bascet commands"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
clap.workspace = true
clio.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
